src/test/deca/syntax/invalid/decl_field/test_decl_field_without_semi.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// no viable alternative at input 'inta};
// Historique:
//    cree le 01/01/2024

class A {   
    int a
}
